fix(news): loading text not showing

--- a/src/pages/news/news.module.scss
+++ b/src/pages/news/news.module.scss
@@ -37,6 +37,10 @@
   }
 }
 
+.loading {
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .item {
     flex-basis: 100%;
